<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/icono_app_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </ImageView>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_marginTop="@dimen/minimo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_marginTop="@dimen/minimo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/LoginTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajeIniciarSesion"
        android:textColor="@color/colorA"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_marginTop="@dimen/minimo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="435dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <RadioButton
            android:id="@+id/arrendador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrendador"
            android:checked="true"
            android:textColor="@color/colorA"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/arrendatario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrendatario"
            android:checked="true"
            android:textColor="@color/colorA"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:layout_marginTop="@dimen/minimo"
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/log_button_bg"
        android:text="@string/registrarse"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />



</androidx.constraintlayout.widget.ConstraintLayout>
