<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icono_app_redondo"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:background="@drawable/redondeado"
        android:layout_marginTop="-14dp">
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/medio"
        android:layout_marginTop="@dimen/minimo"
        android:layout_marginEnd="@dimen/medio"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />


    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorB"
        android:textStyle="bold"
        android:text="MIS PREFERENCIAS"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorB"
        android:textStyle="bold"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="359dp"
        android:layout_height="34dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:paddingStart="26dp"
        android:text="@string/otras"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="22dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/flecha"
        android:layout_marginStart="-20dp"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorB"
        android:text="@string/idioma"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorB"
        android:text="@string/privacidad"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorB"
        android:text="@string/opinion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.3" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/minimo"
        android:layout_marginEnd="@dimen/minimo"
        android:background="@drawable/editar"
        android:translationZ="12dp"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/imageView2" />


    <Button
        android:id="@+id/exit"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorA"
        android:text="Cerrar sesión"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

